# lifestyle-tracker

./: .gitignore  README.md
backend/: .coverage  app.py  constants.py  pyproject.toml  schemas.py  scoring_matrix.py
backend/helpers/: age.py  age_banding.py  lifestyle_scoring.py
backend/services/: lifestyle_service.py  validation_service.py
backend/tests/: .coverage  conftest.py  test_lifestyle.py  test_sanity.py  test_validation.py
backend/utils/: lifestyle_scoring.py
frontend/: jest.config.js  jest.setup.ts  package-lock.json  package.json
frontend/src/__tests__/: Example.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/components/: Footer.tsx  InfoContentBlock.test.tsx  InfoContentBlock.tsx  LogOutButton.test.tsx  LogOutButton.tsx  NavBar.tsx  ResultsActionRequired.test.tsx  ResultsActionRequired.tsx  ResultsNoAction.test.tsx  ResultsNoAction.tsx  ValidateUserForm.test.tsx  ValidateUserForm.tsx  ValidationErrorMessage.test.tsx  ValidationErrorMessage.tsx  footer.module.css  infocontentblock.module.css  lifestyleForm.test.tsx  lifestyleForm.tsx  lifestyleform.module.css  logoutbutton.module.css  navbar.module.css  resultsactionrequired.module.css  resultsnoaction.module.css  validateuserform.module.css  validationerrormessage.module.css
frontend/src/app/questionnaire/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/utils/: fetchHealthStatusAPI.ts  sessionInfoAPI.ts  submitLifestyleFormAPI.ts  validatePatientAPI.ts
